--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -6,9 +6,15 @@ html(lang="en")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         title Noom
         link(rel="stylesheet", href="https://unpkg.com/mvp.css")
+        script(defer src="/public/js/app.js")
     body
         header
             h1 It works!
         main 
-            h2 Welcome to Noom
-        script(src="/public/js/app.js")
+            form#nick
+                input(type="text", placeholder="choose a nickname", required)
+                button Save
+            ul
+            form#message
+                input(type="text", placeholder="write a msg", required)
+                button Send
