--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -6,15 +6,22 @@ html(lang="en")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         title Noom
         link(rel="stylesheet", href="https://unpkg.com/mvp.css")
+        script(defer src="/socket.io/socket.io.js") 
         script(defer src="/public/js/app.js")
     body
         header
-            h1 It works!
+            h1 Noom
         main 
-            form#nick
-                input(type="text", placeholder="choose a nickname", required)
-                button Save
-            ul
-            form#message
-                input(type="text", placeholder="write a msg", required)
-                button Send
+            div#welcome
+                form
+                    input(type="text", required, placeholder="room name")
+                    button Enter Room 
+            div#room
+                h3
+                ul
+                form
+                    input(placeholder="message", required, type="text")
+                    button Send
+
+
+        
