공개방 목록 추가

--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -13,12 +13,17 @@ html(lang="en")
             h1 Noom
         main 
             div#welcome
-                form
+                form#nickForm
+                    input(placeholder="nickname", required, type="text")
+                    button Save              
+                form#enterForm
                     input(type="text", required, placeholder="room name")
                     button Enter Room 
+                h4 Open Rooms: 
+                ul 
             div#room
                 h3
-                ul
+                ul              
                 form
                     input(placeholder="message", required, type="text")
                     button Send
