--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -28,8 +28,8 @@ html(lang="en")
                 div.chatArea
                     ul              
                 form
-                    input(placeholder="message", required, type="text")
-                    button Send
+                    input.send-input(placeholder="message", required, type="text")
+                    button.send-btn Send
                 button#btnLeaveRoom 방나가기
 
 
