--- a/src/public/css/home.css
+++ b/src/public/css/home.css
@@ -24,6 +24,13 @@
     --width-content: 1080px;
 }
 
+body, body *{
+    box-sizing: border-box;
+}
+footer, header{
+    padding:0;
+}
+
 .chatArea {
     width: 100%;
     height: 600px;
@@ -31,11 +38,16 @@
     border: 1px solid var(--color-bg-secondary);
     border-radius: var(--border-radius);
     box-shadow: var(--box-shadow) var(--color-shadow);
-    max-width: var(--width-card-wide);
-    min-width: var(--width-card);
+    max-width: 100%;
+    /* min-width: var(--width-card); */
     padding: 1.5rem;
     display:flex;
     flex-direction: column-reverse;
+}
+@media(max-width:1200px){
+    .chatArea{
+        height: 490px;
+    }
 }
 
 .chatArea > ul {
@@ -59,6 +71,34 @@ li.notice  > div{display: block; text-align: center;}
 .notice.out .txt{display: inline-block; background: #ffdbdb;}
 .notice.in .txt {display: inline-block; background: #dbffe7}
 
+form{
+    width: 100%;
+    max-width: 100%;
+    min-width: auto;
+}
+.send-input{
+    display: inline-block;
+    width: calc(100% - 100px - 10px);
+    height: 40px;
+    margin: 0;
+    vertical-align: top;
+    max-width: 100%;
+}
+.send-btn{
+    display: inline-block;
+    margin: 0 0 0 10px;
+    padding: 0 20px;
+    width: 100px;
+    height: 40px;
+    line-height: 38px;
+    vertical-align: top;
+    font-size: 16px;
+}
+
+#btnLeaveRoom{
+    margin-top: 20px;
+    width: 100%;
+}
 
 /* 스크롤바 설정*/
 .chatArea::-webkit-scrollbar{
